@@ -163,16 +163,18 @@ public int matchLevel(Binding binding, MessageSend messageSend) {
 		if (level == IMPOSSIBLE_MATCH) return IMPOSSIBLE_MATCH;
 	}
 
-	// return type
-	int newLevel = this.matchLevelForType(this.returnSimpleName, this.returnQualification, method.returnType);
-	switch (newLevel) {
-		case IMPOSSIBLE_MATCH:
-			return IMPOSSIBLE_MATCH;
-		case ACCURATE_MATCH: // keep previous level
-			break;
-		default: // ie. INACCURATE_MATCH
-			level = newLevel;
-			break;
+	// look at return type only if declaring type is not specified
+	if (this.declaringSimpleName == null) {
+		int newLevel = this.matchLevelForType(this.returnSimpleName, this.returnQualification, method.returnType);
+		switch (newLevel) {
+			case IMPOSSIBLE_MATCH:
+				return IMPOSSIBLE_MATCH;
+			case ACCURATE_MATCH: // keep previous level
+				break;
+			default: // ie. INACCURATE_MATCH
+				level = newLevel;
+				break;
+		}
 	}
 		
 	// argument types
@@ -186,7 +188,7 @@ public int matchLevel(Binding binding, MessageSend messageSend) {
 			for (int i = 0; i < parameterCount; i++) {
 				char[] qualification = this.parameterQualifications[i];
 				char[] type = this.parameterSimpleNames[i];
-				newLevel = this.matchLevelForType(type, qualification, method.parameters[i]);
+				int newLevel = this.matchLevelForType(type, qualification, method.parameters[i]);
 				switch (newLevel) {
 					case IMPOSSIBLE_MATCH:
 						return IMPOSSIBLE_MATCH;
